--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="spacing"></div>
         <br><br>
 
-        <div class="mid-text">
+        <div class="mid-text" data-aos="flip-right">
             <p>WE BELIEVE INVESTING IN STUDENTS WHO TAKE</p>
             <p><span style="color: #ffc107;">EN</span>TREPRENEURIAL</p>
             <p><span style="color: #ffc107;">ACT</span>ION FOR OTHERS AND CREATE A BETTER WORLD FOR</p>
@@ -59,7 +59,7 @@
         <div class="spacing"></div>
         <br><br>
 
-        <h1 class="heading">OUR PROJECTS</h1>
+        <h1 class="heading" data-aos="fade-up" data-aos-anchor-placement="center-bottom">OUR PROJECTS</h1>
         <div class="spacing"></div>
         <div class="container">
             <div class="box">
